@@ -44,6 +44,7 @@ Jody:
 	* Minor etable warning tweak.
 	* Improve cursor handling for frozen panes.
 	* Fix sorting with hidden cols/rows before region.
+	* have FIXED use the format engine.
 
 Morten:
 	* Fix EXPRESSION crash.
